# Python

./: README.md
Apr25/basics/: fibbonaci.py  hello-python.py  primefactors.py
Apr25/foundations/: async.ipynb  average.py  datatypes-intro.ipynb  exceptionsnother.ipynb  finding_methods.ipynb  hello-world.py  inheritence.ipynb  loops.ipynb  oop_cond_1.ipynb  oop_intro.ipynb  oops.ipynb  persistence.ipynb  readability.ipynb  sequences.ipynb  sequences_contd.ipynb  strings.ipynb
Feb26/basics/: conditionals.ipynb  dictionaries.ipynb  functions.ipynb  generatorsnlistcomprehensions.ipynb  loops.ipynb  numbers_operators.ipynb  sequence.ipynb
June26/basics/: conditionals.ipynb  datatypes.ipynb  dictionary.ipynb  euler.ipynb  functions.ipynb  list_comprehensions.ipynb  oops_learning.ipynb  operators.ipynb  prime.py  sequence_types.ipynb  settings.json  test.py  test1.py  while.ipynb
June26/debugging/: debug1.py  debug2.py  debug3.py  execise1.py  exercise2.py  exercise3.py
Mar26/lt_pos/: README.md  inventory.py  main.py  test.py
May26/async_learning/: async_learning.ipynb  async_sample_1.py  blocking_download_simulation.py  non_blocking_download_simulation.py
May26/auth_demo/: main.py
May26/store_service/: main.py  pyproject.toml  storesdb.db
May26/testing/test_with_coverage/my-project/: main.py  pyproject.toml  test_main.py
Sep25/projects/approach2/warehouse/: pyproject.toml
Sep25/projects/approach2/warehouse/src/warehouse/core/: entities.py  warehouse.py
Sep25/projects/movies_svc/: Dockerfile  docker-compose.yml  pyproject.toml
Sep25/projects/movies_svc/src/movies_svc/: __init__.py  main.py
(+136 files in other folders)
